[package]
name = "fla_remake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.75"
ping_lib={path="D:\\project\\RUST\\ping_lib"}
regex="*"
indicatif = "*"
serde="*"
serde_json="*"
colored="2.0.4"